# Hop-Mill-Brewery

./: .gitignore  Dockerfile  README.md  docker-compose.yml
hop-mill/: Cargo.toml  Rocket.toml
hop-mill/src/: about.rs  api.rs  beer.rs  contact.rs  index.rs  main.rs  taproom.rs  tours.rs
hop-mill/src/chat/: ws_rs.rs
hop-mill/static/: base.css  contact.html
hop-mill/static/css/: about.css  base.css  contact_form.css  taproom.css  tours.css
hop-mill/static/js/: wasm_demo.js  wasm_demo_bg.wasm
hop-mill/static/js/chat/: bundle.js  chat.js  package-lock.json
hop-mill/templates/: about.html.tera  base.tera  beer.html.tera  contact.hbs  contact.html.tera  home.hbs  home.html.tera  taproom.html.tera  tours.html.tera
hop-mill/wasm-demo/: Cargo.toml  LICENSE_MIT
hop-mill/wasm-demo/src/: lib.rs
